2007-01-15  Sébastien Sablé  <sable.sungard@gmail.com>

	* Sybase.py: Corrected incorrect type mx.DateTime.DateTime
	returned by Sybase.Date() in "mx" datetime mode. This type is not
	supported by DataBuf.

2007-01-11  Sébastien Sablé  <sable@users.sourceforge.net>

	* blk.c: Corrected crash on a BLK object when debug is enabled
	(close tracker 1630941 reported by Gregory Bond)

2007-01-02  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: rowcount is now propagated to Cursor (corrects
	tracker 1621003)

	* databuf.c, setup.py, sybasect.h, sybasect.c,
	tests/sybase_dbapi20.py: Added support for python datetime type in
	DataBuf and as parameter of Cursor.execute()

2006-12-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected Date, Time and Timestamp functions when
	using mx.DateTime or native python datetime types

	* Sybase.py: Corrected DATETIME as cursor.description still
	returns native Sybase datetime types

2006-12-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* blk.c: Corrected blk_describe always returns (status, None)
	thanks to patch by Phil Porter

2006-12-13  Sébastien Sablé  <sable@users.sourceforge.net>

	* databuf.c, datafmt.c: Patch to handle CS_LONG type based on
	patch by Paul Rensing

2006-12-08  Sébastien Sablé  <sable@users.sourceforge.net>

	* setup.py, Sybase.py: Changing to release 0.38pre1

	* Sybase.py: Adding support for python native datetime type for
	dates - there is a new "datetime" argument to connect in order to
	choose the datetime type

	* setup.py: Corrected compilation in 64 bits mode based on a patch
	by Harri Pasanen

	* setup.py: Corrected linking with Sybase 15.0

2006-12-07  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Factored out Cursor._checkready() - patch provided by
	Greg Ward

	* Sybase.py: Corrected tests test_description and test_rowcount -
	"This routine cannot be called because another command structure